Update button name with a better meaning
And adjust tests accordingly.

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <h1>cy.tat('anchors')</h1>
   <div>
     <a href="#" ping="https://api.example.com">
-      Click me
+      POST me
     </a>
     <a href="data:,Hello%2C%20World%21" download="helloworld.txt">
       Download
