--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       background-color: #001534;
       font-family: 'Courier New', Courier, monospace;
       font-size: xx-large;
-      margin-left: 6px;
+      text-align: center;
     }
     h1 {
       color: #fffffe;
