Leave just the download button
So I can record a video to demonstrate how to test especifically
that.

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,8 @@
   </style>
 </head>
 <body>
-  <h1>cy.tat('anchors')</h1>
+  <h1>cy.readFile()</h1>
   <div>
-    <a href="#" ping="https://api.example.com">
-      POST me
-    </a>
     <a href="data:,Hello%2C%20World%21" download="helloworld.txt">
       Download
     </a>
