--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,10 @@
   </style>
 </head>
 <body>
-  <h1>cy.tat('anchors')</h1>
+  <h1>cy.intercept()</h1>
   <div>
     <a href="#" ping="https://api.example.com">
       POST me
-    </a>
-    <a href="data:,Hello%2C%20World%21" download="helloworld.txt">
-      Download
     </a>
   </div>
 </body>
